--- a/app/src/main/res/layout/fragment_saved_ideas.xml
+++ b/app/src/main/res/layout/fragment_saved_ideas.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+                name="handler"
+                type="com.doublesp.coherence.interfaces.presentation.ListCompositionHandlerInterface"/>
+    </data>
+
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
@@ -22,6 +28,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"/>
+
+        <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right|end"
+                android:layout_margin="16dp"
+                android:onClick="@{() -> handler.compose()}"
+                android:src="@drawable/ic_create"
+                android:tint="@color/colorButton"
+                app:backgroundTint="@color/colorUpOverlayDark"
+                app:fabSize="normal"
+                app:fab_title="@string/create_grocery_list"/>
 
     </FrameLayout>
 </layout>
