show ingredient in detail page

--- a/app/src/main/res/values/fractions.xml
+++ b/app/src/main/res/values/fractions.xml
@@ -2,4 +2,5 @@
 <resources>
     <fraction name="top_image_ratio">60%</fraction>
     <fraction name="top_image_cut_ratio">16%</fraction>
+    <fraction name="detail_top_image_cut_ratio">8%</fraction>
 </resources>
