--- a/app/src/main/res/layout/fragment_goal_preview.xml
+++ b/app/src/main/res/layout/fragment_goal_preview.xml
@@ -1,112 +1,148 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="handler"
-            type="com.doublesp.coherence.interfaces.presentation.GoalDetailActionHandlerInterface" />
+                name="handler"
+                type="com.doublesp.coherence.interfaces.presentation.GoalDetailActionHandlerInterface"/>
 
         <variable
-            name="pos"
-            type="int" />
+                name="pos"
+                type="int"/>
 
         <variable
-            name="viewModel"
-            type="com.doublesp.coherence.viewmodels.Goal" />
+                name="viewModel"
+                type="com.doublesp.coherence.viewmodels.Goal"/>
     </data>
 
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.doublesp.coherence.fragments.GoalPreviewFragment">
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:background="@color/colorBackground"
+                 tools:context="com.doublesp.coherence.fragments.GoalPreviewFragment">
 
-        <ImageView
-            android:id="@+id/ivIdeaBackgroundImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            app:imageUrl='@{viewModel.imageUrl}'
-            tools:src="@drawable/background_0" />
-
-        <LinearLayout
-            android:id="@+id/llIdeaDescriptionBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/colorOverlay"
-            android:gravity="top"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tvTitle"
+        <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="center_horizontal"
-                android:text='@{viewModel.title}'
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorButton"
-                tools:text="Grilled Deviled Chickens" />
+                android:fillViewport="true">
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fillViewport="true"
-                android:scrollbars="vertical">
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <android.support.percent.PercentFrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <ImageView
+                            android:id="@+id/ivIdeaBackgroundImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/item_goal_height"
+                            android:layout_gravity="top"
+                            android:scaleType="centerCrop"
+                            tools:src="@drawable/background_0"/>
+
+                    <ImageView
+                            android:id="@+id/ivGoalSearchBackground"
+                            android:layout_width="match_parent"
+                            android:layout_gravity="bottom"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/rectangular_triangle"
+                            android:tint="@color/colorBackground"
+                            app:layout_heightPercent="@fraction/detail_top_image_cut_ratio"/>
+
+                    <TextView
+                            android:id="@+id/tvGoalIndex"
+                            android:layout_width="@dimen/activity_list_composition_idea_icon_width"
+                            android:layout_height="@dimen/activity_list_composition_idea_icon_height"
+                            android:layout_gravity="bottom|start|left"
+                            android:layout_marginLeft="@dimen/goal_preview_btn_margin_start"
+                            android:layout_marginStart="@dimen/goal_preview_btn_margin_start"
+                            android:background="@drawable/ic_brightness_1"
+                            android:backgroundTint="@color/colorUp"
+                            android:gravity="center"
+                            android:maxLines="1"
+                            android:text='@{Integer.toString(pos+1)}'
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                            android:textColor="@color/colorButton"
+                            tools:text="1"/>
+
+                </android.support.percent.PercentFrameLayout>
 
                 <TextView
-                    android:id="@+id/tvOverview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:ellipsize="end"
-                    android:text='@{viewModel.description}'
-                    android:textColor="@color/colorButton"
-                    tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
+                        android:id="@+id/tvTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/goal_preview_title_margin"
+                        android:gravity="center_vertical"
+                        android:text='@{viewModel.title}'
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="@color/colorUp"
+                        tools:text="Grilled Deviled Chickens"/>
+
+                <TextView
+                        android:id="@+id/tvOverview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/goal_preview_text_margin"
+                        android:ellipsize="end"
+                        android:text='@{viewModel.description}'
+                        android:textColor="@color/colorText"
+                        tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
 3 lemons, plus wedges for garnish
 4 cloves garlic, peeled and smashed
 1 tablespoon crushed red-pepper flakes, or to taste
 1 tablespoon finely chopped fresh thyme
 1 tablespoon finely chopped fresh rosemary
 1/2 cup olive oil
-Salt, to taste" />
-            </ScrollView>
+Salt, to taste"/>
 
-        </LinearLayout>
+                <android.support.v4.widget.NestedScrollView
+                        android:id="@+id/nsvGoalPreviewIdeasContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rvGoalPreviewIdeas"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                </android.support.v4.widget.NestedScrollView>
+            </LinearLayout>
+        </ScrollView>
 
         <com.getbase.floatingactionbutton.FloatingActionsMenu
-            android:id="@+id/multiple_actions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right|end"
-            android:layout_margin="16dp"
-            app:fabSize="normal"
-            app:fab_addButtonColorNormal="@color/colorUpOverlayDark"
-            app:fab_addButtonColorPressed="@color/colorUpOverlayDark"
-            app:fab_labelStyle="@style/menu_labels_style"
-            app:layout_anchor="@id/llIdeaDescriptionBox"
-            app:layout_anchorGravity="bottom|right|end">
-
-            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/multiple_actions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> handler.onCreateIdeaListClick(pos)}"
-                android:src="@drawable/ic_create"
-                android:tint="@color/colorButton"
-                app:fab_colorNormal="@color/colorDownOverlayDark"
-                app:fab_title="@string/create_list" />
+                android:layout_gravity="bottom|right|end"
+                android:layout_margin="16dp"
+                app:fabSize="normal"
+                app:fab_addButtonColorNormal="@color/colorUpOverlayDark"
+                app:fab_addButtonColorPressed="@color/colorUpOverlayDark"
+                app:fab_labelStyle="@style/menu_labels_style"
+                app:layout_anchor="@id/ivIdeaBackgroundImage"
+                app:layout_anchorGravity="bottom|right|end">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{() -> handler.onBookmarkClick(pos)}"
-                android:src="@drawable/bookmark"
-                android:tint="@color/colorButton"
-                app:bookmark_title='@{viewModel.bookmarked}'
-                app:fab_colorNormal="@color/colorRightOverlayDark"
-                app:fab_title="@string/save_recipe"
-                app:selected='@{!viewModel.bookmarked}' />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{() -> handler.onCreateIdeaListClick(pos)}"
+                    android:src="@drawable/ic_create"
+                    android:tint="@color/colorButton"
+                    app:fab_colorNormal="@color/colorDownOverlayDark"
+                    app:fab_title="@string/create_list"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{() -> handler.onBookmarkClick(pos)}"
+                    android:src="@drawable/bookmark"
+                    android:tint="@color/colorButton"
+                    app:bookmark_title='@{viewModel.bookmarked}'
+                    app:fab_colorNormal="@color/colorRightOverlayDark"
+                    app:fab_title="@string/save_recipe"
+                    app:selected='@{!viewModel.bookmarked}'/>
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
