--- a/app/src/main/res/layout/fragment_goal_preview.xml
+++ b/app/src/main/res/layout/fragment_goal_preview.xml
@@ -42,6 +42,7 @@
                             android:layout_height="@dimen/item_goal_height"
                             android:layout_gravity="top"
                             android:scaleType="centerCrop"
+                            android:transitionName="goalImage"
                             tools:src="@drawable/background_0"/>
 
                     <ImageView
@@ -67,6 +68,7 @@
                             android:text='@{Integer.toString(pos+1)}'
                             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                             android:textColor="@color/colorButton"
+                            android:transitionName="goalIndex"
                             tools:text="1"/>
 
                 </android.support.percent.PercentFrameLayout>
@@ -80,6 +82,7 @@
                         android:text='@{viewModel.title}'
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="@color/colorUp"
+                        android:transitionName="goalTitle"
                         tools:text="Grilled Deviled Chickens"/>
 
                 <TextView
