--- a/app/src/main/res/layout/item_goal.xml
+++ b/app/src/main/res/layout/item_goal.xml
@@ -37,6 +37,7 @@
             android:text='@{Integer.toString(pos+1)}'
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textColor="@color/colorText"
+            android:transitionName="goalIndex"
             tools:text="1" />
 
         <ImageButton
@@ -47,6 +48,7 @@
             android:onClick="@{() -> handler.onPreviewButtonClick(pos)}"
             android:padding="0dp"
             android:scaleType="centerCrop"
+            android:transitionName="goalImage"
             android:src="@drawable/background_3" />
 
         <Button
@@ -61,6 +63,7 @@
             android:text='@{viewModel.title}'
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textColor="@color/colorText"
+            android:transitionName="goalTitle"
             tools:text="Perperoni Pizza" />
 
     </LinearLayout>
