--- a/app/src/main/res/layout/item_goal.xml
+++ b/app/src/main/res/layout/item_goal.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+                name="viewHolder"
+                type="com.doublesp.coherence.viewholders.GoalViewHolder" />
         <variable
             name="pos"
             type="int" />
@@ -37,7 +39,7 @@
             android:text='@{Integer.toString(pos+1)}'
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textColor="@color/colorText"
-            android:transitionName="goalIndex"
+            android:transitionName="@string/transition_goal_index"
             tools:text="1" />
 
         <ImageButton
@@ -45,10 +47,10 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_goal_height"
             android:adjustViewBounds="true"
-            android:onClick="@{() -> handler.onPreviewButtonClick(pos)}"
+            android:onClick="@{() -> handler.onPreviewButtonClick(viewHolder, pos)}"
             android:padding="0dp"
             android:scaleType="centerCrop"
-            android:transitionName="goalImage"
+            android:transitionName="@string/transition_goal_image"
             android:src="@drawable/background_3" />
 
         <Button
@@ -58,12 +60,12 @@
             android:background="@android:color/transparent"
             android:gravity="left"
             android:maxLines="2"
-            android:onClick="@{() -> handler.onPreviewButtonClick(pos)}"
+            android:onClick="@{() -> handler.onPreviewButtonClick(viewHolder, pos)}"
             android:padding="20dp"
             android:text='@{viewModel.title}'
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textColor="@color/colorText"
-            android:transitionName="goalTitle"
+            android:transitionName="@string/transition_goal_title"
             tools:text="Perperoni Pizza" />
 
     </LinearLayout>
