--- a/app/src/main/res/layout/fragment_goal_search.xml
+++ b/app/src/main/res/layout/fragment_goal_search.xml
@@ -1,59 +1,67 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
                 name="handler"
                 type="com.doublesp.coherence.interfaces.presentation.ListCompositionHandlerInterface"/>
     </data>
 
-    <android.support.percent.PercentFrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorBackground"
-            tools:context="com.doublesp.coherence.fragments.GoalSearchFragment">
+            android:layout_height="match_parent">
 
         <android.support.percent.PercentFrameLayout
-            android:id="@+id/flGoalSearchBackground"
-            android:layout_width="match_parent"
-            app:layout_heightPercent="@fraction/top_image_ratio">
-
-            <ImageView
-                android:id="@+id/ivIdeaSearchBackground"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                tools:src="@drawable/background_0" />
+                android:background="@color/colorBackground"
+                tools:context="com.doublesp.coherence.fragments.GoalSearchFragment">
 
-            <ImageView
-                android:id="@+id/ivGoalSearchBackground"
-                android:layout_width="match_parent"
-                android:layout_gravity="bottom"
-                android:scaleType="fitXY"
-                android:src="@drawable/rectangular_triangle"
-                android:tint="@color/colorBackground"
-                app:layout_heightPercent="@fraction/top_image_cut_ratio" />
+            <android.support.percent.PercentFrameLayout
+                    android:id="@+id/flGoalSearchBackground"
+                    android:layout_width="match_parent"
+                    app:layout_heightPercent="@fraction/top_image_ratio">
+
+                <ImageView
+                        android:id="@+id/ivIdeaSearchBackground"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        tools:src="@drawable/background_0"/>
+
+                <ImageView
+                        android:id="@+id/ivGoalSearchBackground"
+                        android:layout_width="match_parent"
+                        android:layout_gravity="bottom"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/rectangular_triangle"
+                        android:tint="@color/colorBackground"
+                        app:layout_heightPercent="@fraction/top_image_cut_ratio"/>
+
+            </android.support.percent.PercentFrameLayout>
+
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvIdeaSearchResults"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:clipToPadding="false"/>
+
+            <android.support.design.widget.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right|end"
+                    android:layout_margin="16dp"
+                    android:onClick="@{() -> handler.compose()}"
+                    android:src="@drawable/ic_create"
+                    android:tint="@color/colorButton"
+                    app:backgroundTint="@color/colorUpOverlayDark"
+                    app:fabSize="normal"
+                    app:fab_title="@string/create_grocery_list"/>
 
         </android.support.percent.PercentFrameLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvIdeaSearchResults"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:clipToPadding="false" />
-
-        <android.support.design.widget.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right|end"
-                android:layout_margin="16dp"
-                android:onClick="@{() -> handler.compose()}"
-                android:src="@drawable/ic_create"
-                android:tint="@color/colorButton"
-                app:backgroundTint="@color/colorUpOverlayDark"
-                app:fabSize="normal"
-                app:fab_title="@string/create_grocery_list"/>
-
-    </android.support.percent.PercentFrameLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
