--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="colorBorder">#808080</color>
     <color name="colorOverlay">#67000000</color>
     <color name="colorOverlayLight">#50000000</color>
+    <color name="colorOverlayDark">#CC000000</color>
     <color name="colorWhiteOverlay">#AAFFFFFF</color>
     <color name="colorWhiteOverlayLight">#55FFFFFF</color>
     <color name="colorActionBarTitle">#FFFFFF</color>
