--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,5 @@
     <dimen name="card_elevation">8dp</dimen>
     <dimen name="grid_margin">4dp</dimen>
     <dimen name="cell_margin">16dp</dimen>
+    <dimen name="snackbar_icon_padding">3dp</dimen>
 </resources>
