--- a/app/src/main/res/layout/fragment_goal_search.xml
+++ b/app/src/main/res/layout/fragment_goal_search.xml
@@ -30,7 +30,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        tools:src="@drawable/background_0"/>
+                        android:src="@drawable/background_0"/>
 
                 <ImageView
                         android:id="@+id/ivGoalSearchBackground"
