--- a/app/src/main/res/layout/simple_item_idea.xml
+++ b/app/src/main/res/layout/simple_item_idea.xml
@@ -13,12 +13,12 @@
             type="com.doublesp.coherence.viewmodels.Idea"/>
     </data>
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                  android:orientation="horizontal"
-                  android:id="@+id/flSimpleItemIdea"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:background="@color/colorUpOverlay">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/flSimpleItemIdea"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorUpOverlay">
 
         <ImageView
             android:id="@+id/ivIdea"
