--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -10,7 +10,7 @@
 
         <variable
                 name="viewModel"
-                type="com.pinyaoting.garcon.viewmodels.Idea"/>
+                type="com.pinyaoting.garcon.viewstates.Idea"/>
 
     </data>
 
