--- a/app/src/main/res/layout/item_goal.xml
+++ b/app/src/main/res/layout/item_goal.xml
@@ -16,7 +16,7 @@
 
         <variable
             name="viewModel"
-            type="com.pinyaoting.garcon.viewmodels.Goal"/>
+            type="com.pinyaoting.garcon.viewstates.Goal"/>
     </data>
 
 
