--- a/app/src/main/res/layout/item_goal.xml
+++ b/app/src/main/res/layout/item_goal.xml
@@ -51,7 +51,7 @@
             android:padding="0dp"
             android:scaleType="centerCrop"
             android:transitionName="@string/transition_goal_image"
-            android:src="@drawable/background_3"/>
+            android:src="@drawable/ic_placeholder"/>
 
         <Button
             android:id="@+id/tvGoalTitle"
