--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -26,7 +26,7 @@
                 android:layout_width="@dimen/simple_item_idea_image_width"
                 android:layout_height="@dimen/simple_item_idea_image_height"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/background_3"/>
+                tools:src="@drawable/ic_placeholder"/>
 
         <TextView
                 android:id="@+id/tvIdea"
