--- a/app/src/main/res/layout/single_plan.xml
+++ b/app/src/main/res/layout/single_plan.xml
@@ -16,7 +16,7 @@
             android:adjustViewBounds="true"
             android:padding="0dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/background_3"/>
+            android:src="@drawable/ic_placeholder"/>
 
         <LinearLayout
             android:id="@+id/llDescriptionBox"
