--- a/app/src/main/res/layout/fragment_goal_preview.xml
+++ b/app/src/main/res/layout/fragment_goal_preview.xml
@@ -12,7 +12,7 @@
             type="int"/>
 
         <variable
-            name="viewModel"
+            name="viewState"
             type="com.pinyaoting.garcon.viewstates.Goal"/>
     </data>
 
@@ -83,7 +83,7 @@
                     android:layout_marginStart="@dimen/goal_preview_title_margin"
                     android:layout_marginRight="@dimen/goal_preview_title_margin"
                     android:layout_marginEnd="@dimen/goal_preview_title_margin"
-                    android:text='@{viewModel.title}'
+                    android:text='@{viewState.title}'
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/colorUp"
                     android:transitionName="@string/transition_goal_title"
@@ -120,7 +120,7 @@
                             android:background="@android:color/transparent"
                             android:gravity="center_vertical"
                             android:maxLines="1"
-                            android:text='@{viewModel.subTitle}'
+                            android:text='@{viewState.subTitle}'
                             android:textColor="@color/colorUpOverlay"
                             tools:text="ready in 16 minutes"/>
 
@@ -132,7 +132,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/goal_preview_text_margin"
                     android:ellipsize="end"
-                    android:text='@{viewModel.description}'
+                    android:text='@{viewState.description}'
                     android:textColor="@color/colorText"
                     tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
 3 lemons, plus wedges for garnish
