--- a/app/src/main/res/layout/fragment_idea_list.xml
+++ b/app/src/main/res/layout/fragment_idea_list.xml
@@ -5,13 +5,13 @@
 
         <variable
             name="handler"
-            type="com.pinyaoting.garcon.interfaces.presentation.ListFragmentActionHandlerInterface"/>
+            type="com.pinyaoting.garcon.interfaces.presentation.IdeaListFragmentActionHandlerInterface"/>
     </data>
 
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context="com.pinyaoting.garcon.fragments.ListCompositionFragment">
+                 tools:context="com.pinyaoting.garcon.fragments.IdeaListFragment">
 
         <ImageView
             android:id="@+id/ivIdeaCompositionBackground"
