--- a/app/src/main/res/layout/fragment_goal_search.xml
+++ b/app/src/main/res/layout/fragment_goal_search.xml
@@ -43,6 +43,13 @@
                 android:background="@android:color/transparent"
                 android:clipToPadding="false"/>
 
+            <include
+                android:id="@+id/activity_main_toolbar_container"
+                layout="@layout/toolbar_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"/>
+
         </android.support.percent.PercentFrameLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
