--- a/app/src/main/res/layout/fragment_idea_list.xml
+++ b/app/src/main/res/layout/fragment_idea_list.xml
@@ -79,5 +79,12 @@
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
+        <include
+            android:id="@+id/activity_main_toolbar_container"
+            layout="@layout/toolbar_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"/>
+
     </FrameLayout>
 </layout>
