fix empty car function

--- a/app/src/main/res/layout/fragment_idea_list.xml
+++ b/app/src/main/res/layout/fragment_idea_list.xml
@@ -71,7 +71,7 @@
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> handler.onNearbyStoreButtonClick()}"
+                android:onClick="@{() -> handler.onEmptyButtonClick()}"
                 android:src="@drawable/ic_remove_shopping_cart"
                 android:tint="@color/colorButton"
                 app:fab_colorNormal="@color/colorLeftOverlayDark"
