--- a/app/src/main/res/layout/fragment_goal_preview.xml
+++ b/app/src/main/res/layout/fragment_goal_preview.xml
@@ -55,14 +55,14 @@
                         app:layout_heightPercent="@fraction/top_image_cut_ratio"/>
 
                     <TextView
-                        android:id="@+id/tvGoalIndex"
+                        android:id="@+id/tvGoalPreviewIndex"
                         android:layout_width="@dimen/activity_list_composition_idea_icon_width"
                         android:layout_height="@dimen/activity_list_composition_idea_icon_height"
                         android:layout_gravity="bottom|start|left"
                         android:layout_marginLeft="@dimen/goal_preview_btn_margin_start"
                         android:layout_marginStart="@dimen/goal_preview_btn_margin_start"
                         android:background="@drawable/ic_brightness_1"
-                        android:backgroundTint="@color/colorUp"
+                        tools:backgroundTint="@color/colorUp"
                         android:gravity="center"
                         android:maxLines="1"
                         android:text='@{Integer.toString(pos+1)}'
@@ -74,7 +74,7 @@
                 </android.support.percent.PercentFrameLayout>
 
                 <TextView
-                    android:id="@+id/tvTitle"
+                    android:id="@+id/tvGoalPreviewTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -85,7 +85,7 @@
                     android:layout_marginEnd="@dimen/goal_preview_title_margin"
                     android:text='@{viewState.title}'
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/colorUp"
+                    tools:textColor="@color/colorUp"
                     android:transitionName="@string/transition_goal_title"
                     tools:text="Grilled Deviled Chickens"/>
 
@@ -110,7 +110,7 @@
                             android:paddingRight="@dimen/goal_preview_icon_padding"
                             android:paddingEnd="@dimen/goal_preview_icon_padding"
                             android:alpha="0.5"
-                            android:tint="@color/colorUp"
+                            tools:tint="@color/colorUp"
                             android:src="@drawable/ic_schedule"/>
 
                     <TextView
@@ -121,7 +121,7 @@
                             android:gravity="center_vertical"
                             android:maxLines="1"
                             android:text='@{viewState.subTitle}'
-                            android:textColor="@color/colorUpOverlay"
+                            tools:textColor="@color/colorUpOverlay"
                             tools:text="ready in 16 minutes"/>
 
                 </LinearLayout>
