--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -5,44 +5,96 @@
     <data>
 
         <variable
-                name="pos"
-                type="int"/>
+            name="pos"
+            type="int"/>
 
         <variable
-                name="viewState"
-                type="com.pinyaoting.garcon.viewstates.Idea"/>
+            name="viewState"
+            type="com.pinyaoting.garcon.viewstates.Idea"/>
+
+        <variable
+            name="handler"
+            type="com.pinyaoting.garcon.interfaces.presentation.IdeaListActionHandlerInterface"/>
 
     </data>
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                  android:orientation="horizontal"
-                  android:id="@+id/llItemIdea"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:background="@color/colorUpOverlay">
+    <RelativeLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/llItemIdea"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/simple_item_idea_image_height"
+        android:background="@color/colorUpOverlay">
 
         <ImageView
-                android:id="@+id/ivIdea"
-                android:layout_width="@dimen/simple_item_idea_image_width"
-                android:layout_height="@dimen/simple_item_idea_image_height"
-                android:scaleType="centerCrop"
-                tools:src="@drawable/ic_placeholder"/>
+            android:id="@+id/ivIdea"
+            android:layout_width="@dimen/simple_item_idea_image_width"
+            android:layout_height="@dimen/simple_item_idea_image_height"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/ic_placeholder"/>
+
+        <com.lb.auto_fit_textview.AutoResizeTextView
+            android:id="@+id/tvIdea"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_toRightOf="@+id/ivIdea"
+            android:layout_toEndOf="@+id/ivIdea"
+            android:layout_toLeftOf="@+id/ibDecreaseQuantity"
+            android:layout_toStartOf="@+id/ibDecreaseQuantity"
+            android:gravity="center_vertical|left|start"
+            android:maxLines="1"
+            android:text='@{viewState.content}'
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="@color/colorBackground"
+            app:crossout='@{viewState.crossedOut}'
+            tools:text="egg"/>
+
+        <ImageButton
+            android:id="@+id/ibDecreaseQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_toLeftOf="@+id/tvQuantity"
+            android:layout_toStartOf="@+id/tvQuantity"
+            android:src="@drawable/ic_remove_circle_outline"
+            android:tint="@color/colorButton"
+            android:background="@android:color/transparent"
+            android:onClick="@{() -> handler.onDecreaseQuantity(pos)}"
+        />
 
         <TextView
-                android:id="@+id/tvIdea"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginStart="10dp"
-                android:gravity="center_vertical|left|start"
-                android:text='@{viewState.content}'
-                android:maxLines="1"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textColor="@color/colorBackground"
-                app:crossout='@{viewState.crossedOut}'
-                tools:text="egg"/>
+            android:id="@+id/tvQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_toLeftOf="@+id/ibIncreaseQuantity"
+            android:layout_toStartOf="@+id/ibIncreaseQuantity"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:gravity="center_vertical|left|start"
+            android:text='@{String.format("%d", viewState.quantity)}'
+            tools:text='1'
+        />
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/ibIncreaseQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_add_circle_outline"
+            android:tint="@color/colorButton"
+            android:background="@android:color/transparent"
+            android:onClick="@{() -> handler.onIncreaseQuantity(pos)}"
+        />
+
+    </RelativeLayout>
 </layout>
