--- a/app/src/main/res/menu/menu_goal_search.xml
+++ b/app/src/main/res/menu/menu_goal_search.xml
@@ -6,7 +6,7 @@
         android:icon="@android:drawable/ic_menu_search"
         android:orderInCategory="5"
         android:title="@string/goal_search_hint"
-        app:actionViewClass="com.pinyaoting.androidgarcon.view.AutoCompleteSearchView"
+        app:actionViewClass="com.pinyaoting.garcondecuisine.view.AutoCompleteSearchView"
         app:showAsAction="ifRoom|collapseActionView"/>
     <item
         android:id="@+id/sign_out_menu"
